# pica

./: CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt
benchmark/cmdline/: cmdline.h
benchmark/src/: EnsembleHelper.h  GridHelper.h  Main.cpp  Output.cpp  Output.h  Parameters.h  Parser.cpp  Parser.h  ParticleProcessing.h  PerformanceTracker.cpp  PerformanceTracker.h  Simulation.cpp  Simulation.h  Timer.cpp  Timer.h
include/pica/: Constants.h  CurrentDeposition.h  Ensemble.h  FP.h  Fdtd.h  FieldSolver.h  Formfactor.h  Grid.h  Parameters.h  Particle.h  ParticlePush.h  ParticleSystem.h  ScalarField.h  TileInterpolator.h  Vectors.h
include/pica/currentDeposition/: CurrentDepositor.h  CurrentDepositorInterface.h  CurrentDepositorYeeGrid.h
include/pica/fieldInterpolation/: FieldInterpolator.h  FieldInterpolatorInterface.h  FieldInterpolatorYeeGrid.h  TileInterpolator.h
include/pica/fieldSolver/: Fdtd.h  FieldSolver.h  YeeSolver.h
include/pica/grid/: Grid.h  YeeGrid.h
include/pica/math/: Constants.h  Dimension.h  Vectors.h
include/pica/particlePush/: BorisPusher.h  BorisPusherBaseline.h  ParticlePush.h
include/pica/particles/: Ensemble.h  EnsembleOrdered.h  EnsembleSupercells.h  EnsembleUnordered.h  Particle.h  ParticleArray.h  ParticleBaseline.h  ParticleInterface.h  ParticleSystem.h  ParticleTraits.h  SpeciesInterface.h  SpeciesTraits.h
include/pica/threading/: OpenMPHelper.h
include/pica/utility/: Array.h  Assert.h  Utility.h
src/: CMakeLists.txt  CurrentDeposition.cpp  Ensemble.cpp  Fdtd.cpp  FieldSolver.cpp  Grid.cpp  Particle.cpp  ParticlePush.cpp  ParticleSystem.cpp  ScalarField.cpp  Utility.cpp
src/currentDeposition/: CurrentDeposition.cpp
src/fieldSolver/: Fdtd.cpp  FieldSolver.cpp
src/grid/: Grid.cpp  ScalarField.cpp
src/particle/: Particle.cpp
src/particlePush/: ParticlePush.cpp
src/particles/: Ensemble.cpp  Particle.cpp  ParticleSystem.cpp
src/utility/: Utility.cpp
test/: CMakeLists.txt
test/src/: EnsembleTests.cpp  FPTests.cpp  FormfactorTests.cpp  Main.cpp  OpenMPHelperTests.cpp  ParticleMoveTests.cpp  ParticleSystemTests.cpp  ParticleTests.cpp  ScalarFieldTests.cpp  TestingUtility.cpp  TestingUtility.h  TileInterpolationTests.cpp  UtilityTests.cpp  VectorsTests.cpp
test/src/fieldInterpolation/: FieldInterpolatorTests.cpp  TileInterpolationTests.cpp
test/src/fieldSolver/: YeeSolverTests.cpp
test/src/grid/: ScalarFieldTests.cpp  YeeGridTests.cpp
test/src/math/: ConstantsTests.cpp  DimensionTests.cpp  FPTests.cpp  VectorsTests.cpp
test/src/particle/: ParticleTests.cpp
test/src/particlePush/: ParticleMoveTests.cpp
test/src/particles/: EnsembleTests.cpp  ParticleArrayTests.cpp  ParticleSystemTests.cpp  ParticleTests.cpp
test/src/threading/: OpenMPHelperTests.cpp
test/src/utility/: ArrayTests.cpp  UtilityTests.cpp
